# ttyg-evaluation

./: README.md  environment.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: _pull_requests.yml  _release.yml
qa_eval/: __init__.py  evaluation.py
qa_eval/steps/: __init__.py
tests/: test_evaluation.py  test_retrieval_evaluation.py  test_sparql_results_comparison.py  test_tools_calls_comparison.py
tests/steps/: test_retrieval_evaluation.py  test_tool_calls.py
tests/test_data/: actual_tools_calls_1.yaml  actual_tools_calls_2.yaml  actual_tools_calls_3.yaml  actual_tools_calls_4.yaml  expected_tools_calls_1.yaml  expected_tools_calls_2.yaml  expected_tools_calls_3.yaml  expected_tools_calls_4.yaml  sample_chat_responses_1.jsonl  sample_chat_responses_2.jsonl  sample_evaluation_per_question_1.json  sample_evaluation_per_question_1.yaml  sample_evaluation_per_question_2.json  sample_evaluation_per_question_2.yaml  sample_evaluation_summary_1.json  sample_evaluation_summary_1.yaml  sample_evaluation_summary_2.json  sample_evaluation_summary_2.yaml  sample_gold_standard_corpus_1.json  sample_gold_standard_corpus_1.yaml
ttyg_evaluation/: evaluation.py  tools_calls_comparison.py
